Build GoogLeNet_V2 and V3

--- a/03B_GoogLeNet_V2&V3.ipynb
+++ b/03B_GoogLeNet_V2&V3.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "c8d7abf1-d37b-4abf-8b56-e81be5c4ce27",
    "metadata": {},
    "outputs": [],
@@ -353,8 +353,11 @@
     "        # Fully Connected layers and dropout\n",
     "        self.layer_drop = torch.nn.Dropout(p=dropout_rate)\n",
     "\n",
-    "        self.layer6 = FullyConnectedLayer.Dense(1 * 1 * 2048, 1000)\n",
-    "\n",
+    "        self.layer6 = torch.nn.Sequential(\n",
+    "            FullyConnectedLayer.Dense(1 * 1 * 2048, 1000),\n",
+    "            torch.nn.BatchNorm1d(1000)\n",
+    "        )\n",
+    "        \n",
     "        self.layer7 = FullyConnectedLayer.Dense(1000, 1000)\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
@@ -379,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "b706fc53-973b-4e8f-a943-a097da5099f6",
    "metadata": {},
    "outputs": [
@@ -702,16 +705,17 @@
       "       AvgPool2d-310           [-1, 2048, 1, 1]               0\n",
       "         Dropout-311           [-1, 2048, 1, 1]               0\n",
       "          Linear-312                 [-1, 1000]       2,049,000\n",
-      "          Linear-313                 [-1, 1000]       1,001,000\n",
+      "     BatchNorm1d-313                 [-1, 1000]           2,000\n",
+      "          Linear-314                 [-1, 1000]       1,001,000\n",
       "================================================================\n",
-      "Total params: 43,928,384\n",
-      "Trainable params: 43,928,384\n",
+      "Total params: 43,930,384\n",
+      "Trainable params: 43,930,384\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 1.02\n",
-      "Forward/backward pass size (MB): 320.86\n",
-      "Params size (MB): 167.57\n",
-      "Estimated Total Size (MB): 489.46\n",
+      "Forward/backward pass size (MB): 320.87\n",
+      "Params size (MB): 167.58\n",
+      "Estimated Total Size (MB): 489.47\n",
       "----------------------------------------------------------------\n"
      ]
     }
