--- a/01D_Alexnet_Final_Kaggle.ipynb
+++ b/01D_Alexnet_Final_Kaggle.ipynb
@@ -30,7 +30,7 @@
     "        Args:\n",
     "            x (torch.Tensor): Input tensor\n",
     "        Returns:\n",
-    "            torch.Tensor: Output tensor with ReALU applied\n",
+    "            torch.Tensor: Output tensor with ReLU applied\n",
     "        \"\"\"\n",
     "        return torch.maximum(x, torch.zeros_like(x))"
    ]
